adding DELETE methods
